--- a/src/components/Portfolio.astro
+++ b/src/components/Portfolio.astro
@@ -1,5 +1,5 @@
 ---
-import { Icon } from "astro-icon/components";
+import LandingPagePortfolio from "../components/LandingPagePortfolio.astro";
 ---
 
 <section id="portfolio">
@@ -44,153 +44,9 @@ import { Icon } from "astro-icon/components";
           Let's have a look at my awesome projects, let's go!
         </p>
       </div>
-      <div
-        class="mx-auto mt-10 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 border-t border-sky-500 pt-10 sm:mt-16 sm:pt-16 lg:mx-0 lg:max-w-none lg:grid-cols-3"
-      >
-        <div
-          class="px-3 pb-12 pt-3 nm-flat-sky-100-lg hover:nm-flat-stone-100-lg dark:nm-flat-gray-700-lg dark:hover:dark:nm-flat-gray-800-lg transition duration-200 ease-in-out transform hover:scale-110 rounded-lg p-8 text-center max-w-sm w-full"
-        >
-          <article class="flex max-w-xl flex-col items-start justify-between">
-            <div class="flex items-center gap-x-4 text-xs font-Futurewave">
-              <time datetime="2024-03-16" class="">Mar 16, 2024</time>
-              <a
-                href="#"
-                class="relative z-10 rounded-full bg-gray-50 px-3 py-1.5 font-medium text-gray-600 hover:bg-gray-100"
-                >Astro.build</a
-              >
-            </div>
-            <div class="group relative">
-              <h3
-                class="mt-3 text-lg font-semibold leading-6 font-Futurewave group-hover:text-gray-600"
-              >
-                <a href="#">
-                  <span class="absolute inset-0"></span>
-                  Boost your skills
-                </a>
-              </h3>
-              <p class="mt-5 line-clamp-3 text-sm leading-6">
-                Building and deploying an Astro.Build website with Tailwind CSS
-                and HyGraph as an headless CMS.
-              </p>
-            </div>
-            <div class="relative mt-8 flex items-center gap-x-4">
-              <hr class="py-6 border border-orange-600" />
-              <div class="flex justify-center space-x-3 md:justify-start">
-                <h2 class="sr-only">OWDDM</h2>
-                <div class="flex items-center justify-center">
-                  <Icon
-                    name="masscomMediaLogo"
-                    class="h-8 w-auto rounded border-2 border-white/50 hover:bg-sky-500 sm:h-10 lg:h-12 bg-sky-100"
-                    aria-label="MassCom Media logo"
-                  />
-                </div>
-                <span class="self-center font-Futurewave text-xs"
-                  ><a href="/me-myself-and-i">romano moesa</a><br /><span
-                    class="text-gradient-brand font-extrabold uppercase tracking-[0.6em]"
-                    >owddm</span
-                  ></span
-                >
-              </div>
-            </div>
-          </article>
-        </div>
 
-        <!-- More posts... -->
-        <div
-          class="px-3 pb-12 pt-3 nm-flat-sky-100-lg hover:nm-flat-stone-100-lg dark:nm-flat-gray-700-lg dark:hover:dark:nm-flat-gray-800-lg transition duration-200 ease-in-out transform hover:scale-110 rounded-lg p-8 text-center max-w-sm w-full"
-        >
-          <article class="flex max-w-xl flex-col items-start justify-between">
-            <div class="flex items-center gap-x-4 text-xs font-Futurewave">
-              <time datetime="2024-03-16" class="">Mar 16, 2024</time>
-              <a
-                href="#"
-                class="relative z-10 rounded-full bg-gray-50 px-3 py-1.5 font-medium text-gray-600 hover:bg-gray-100"
-                >Astro.build</a
-              >
-            </div>
-            <div class="group relative">
-              <h3
-                class="mt-3 text-lg font-semibold leading-6 font-Futurewave group-hover:text-gray-600"
-              >
-                <a href="#">
-                  <span class="absolute inset-0"></span>
-                  Boost your skills
-                </a>
-              </h3>
-              <p class="mt-5 line-clamp-3 text-sm leading-6">
-                Building and deploying an Astro.Build website with Tailwind CSS
-                and HyGraph as an headless CMS.
-              </p>
-            </div>
-            <div class="relative mt-8 flex items-center gap-x-4">
-              <hr class="py-6 border border-orange-600" />
-              <div class="flex justify-center space-x-3 md:justify-start">
-                <h2 class="sr-only">OWDDM</h2>
-                <div class="flex items-center justify-center">
-                  <Icon
-                    name="masscomMediaLogo"
-                    class="h-8 w-auto rounded border-2 border-white/50 hover:bg-sky-500 sm:h-10 lg:h-12 bg-sky-100"
-                    aria-label="MassCom Media logo"
-                  />
-                </div>
-                <span class="self-center font-Futurewave text-xs"
-                  ><a href="/me-myself-and-i">romano moesa</a><br /><span
-                    class="text-gradient-brand font-extrabold uppercase tracking-[0.6em]"
-                    >owddm</span
-                  ></span
-                >
-              </div>
-            </div>
-          </article>
-        </div>
-        <div
-          class="px-3 pb-12 pt-3 nm-flat-sky-100-lg hover:nm-flat-stone-100-lg dark:nm-flat-gray-700-lg dark:hover:dark:nm-flat-gray-800-lg transition duration-200 ease-in-out transform hover:scale-110 rounded-lg p-8 text-center max-w-sm w-full"
-        >
-          <article class="flex max-w-xl flex-col items-start justify-between">
-            <div class="flex items-center gap-x-4 text-xs font-Futurewave">
-              <time datetime="2024-03-16" class="">Mar 16, 2024</time>
-              <a
-                href="#"
-                class="relative z-10 rounded-full bg-gray-50 px-3 py-1.5 font-medium text-gray-600 hover:bg-gray-100"
-                >Astro.build</a
-              >
-            </div>
-            <div class="group relative">
-              <h3
-                class="mt-3 text-lg font-semibold leading-6 font-Futurewave group-hover:text-gray-600"
-              >
-                <a href="#">
-                  <span class="absolute inset-0"></span>
-                  Boost your skills
-                </a>
-              </h3>
-              <p class="mt-5 line-clamp-3 text-sm leading-6">
-                Building and deploying an Astro.Build website with Tailwind CSS
-                and HyGraph as an headless CMS.
-              </p>
-            </div>
-            <div class="relative mt-8 flex items-center gap-x-4">
-              <hr class="py-6 border border-orange-600" />
-              <div class="flex justify-center space-x-3 md:justify-start">
-                <h2 class="sr-only">OWDDM</h2>
-                <div class="flex items-center justify-center">
-                  <Icon
-                    name="masscomMediaLogo"
-                    class="h-8 w-auto rounded border-2 border-white/50 hover:bg-sky-500 sm:h-10 lg:h-12 bg-sky-100"
-                    aria-label="MassCom Media logo"
-                  />
-                </div>
-                <span class="self-center font-Futurewave text-xs"
-                  ><a href="/me-myself-and-i">romano moesa</a><br /><span
-                    class="text-gradient-brand font-extrabold uppercase tracking-[0.6em]"
-                    >owddm</span
-                  ></span
-                >
-              </div>
-            </div>
-          </article>
-        </div>
-      </div>
+      <LandingPagePortfolio />
+
       <p class="mt-8 text-right text-sm font-Futurewave">
         <a href="/portfolio"> ... check out my projects &rarr;</a>
       </p>
