--- a/src/pages/portfolio/index.astro
+++ b/src/pages/portfolio/index.astro
@@ -25,7 +25,7 @@ const {
           />
         </h1>
         <span
-          class="self-center font-extrabold uppercase tracking-[0.6em] text-xl"
+          class="self-center font-extrabold uppercase tracking-[0.6em] text-base sm:text-xl"
           >{title}</span
         >
       </a>
