--- a/src/components/BlogIndex.astro
+++ b/src/components/BlogIndex.astro
@@ -42,7 +42,7 @@ const sizes = "(min-width: 1024px) 33vw, (min-width: 768px) 50vw, 100vw";
   <div class="mx-auto mt-10 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 border-t border-sky-500 pt-10 sm:mt-16 sm:pt-16 lg:mx-0 lg:max-w-none lg:grid-cols-3 columns-3">
     {
       posts.data.posts.map((post) => (
-        <li>
+        <li class="mx-auto">
           <div class="px-3 pb-12 pt-3 nm-flat-sky-100-lg hover:nm-flat-stone-100-lg dark:nm-flat-gray-800-lg dark:hover:nm-flat-stone-600-lg transition duration-200 ease-in-out transform hover:scale-110 rounded-lg p-8 text-center max-w-sm w-full">
             <article class="flex max-w-xl flex-col items-start justify-between">
               <div class="flex items-center gap-x-4 text-xs font-Futurewave">
