--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,25 +1,26 @@
 ---
 import { Image } from "astro:assets";
 import RyuHero from "../assets/img/goldDragonRed.webp";
-import Avatar from "../assets/img/sunset-crop.webp";
 
 const props = Astro.props;
 const sizes = "(min-width: 1024px) 33vw, (min-width: 768px) 50vw, 100vw";
 ---
 
-<section id="hero" class="h-full aspect-auto">
+<section id="hero" class="h-full">
   <Image
     src={RyuHero}
     alt="A magnificent Asian golden dragon encircled by crimson-gold blossoms."
     loading="eager"
-    class="absolute object-cover h-screen"
+    class="absolute object-cover h-screen aspect-auto"
     sizes={sizes}
+    width={1920}
+    height={1076}
   />
   <div
     class="relative grid h-screen place-items-center bg-red-800/80 dark:bg-gray-800/90 p-6"
   >
-    <div class="flex flex-col-reverse lg:flex-row items-center gap-12 px-0 sm:px-6">
-      <div class="text-grey-950">
+    <div class="items-center px-0 sm:px-6">
+      <div>
         <div class="text-center">
           <h1
             class="font-Futurewave text-xs sm:text-xl text-gray-400 dark:text-white"
@@ -87,17 +88,7 @@ const sizes = "(min-width: 1024px) 33vw, (min-width: 768px) 50vw, 100vw";
           </a>
         </div>
       </div>
-      <div id="avatar">
-        <div class="overflow-hidden aspect-auto">
-          <Image
-            src={Avatar}
-            alt="Selfie"
-            loading="eager"
-            class="rounded-full w-60 h-60 sm:w-72 sm:h-72"
-            sizes={sizes}
-          />
-        </div>
-      </div>
+
     </div>
   </div>
 </section>
