--- a/src/components/IntroSection.astro
+++ b/src/components/IntroSection.astro
@@ -6,17 +6,22 @@ export interface Props {
 
 const { title, id } = Astro.props;
 ---
+
 <section id={id} class="bg-sky-200 dark:bg-sky-950">
   <div class="mx-auto max-w-7xl px-6 lg:px-8 py-24 sm:py-32">
-    <div class="mx-auto max-w-5xl lg:text-center px-2 sm:px-6 lg:px-0 m-3 pb-12 pt-3 rounded-lg p-8 text-left sm:text-center w-full">
-      <h2 class="mt-2 text-3xl font-bold tracking-tight font-Futurewave sm:text-4xl">
+    <div
+      class="mx-auto max-w-5xl lg:text-center px-2 sm:px-6 lg:px-0 m-3 pb-12 pt-3 rounded-lg p-8 text-left sm:text-center w-full"
+    >
+      <h2
+        class="mt-2 text-3xl font-bold tracking-tight font-Futurewave sm:text-4xl text-center"
+      >
         {title}
       </h2>
       <div
         class="mt-6 text-sm sm:text-lg leading-8 text-red-800 dark:text-sky-500 font-Futurewave px-6 sm:px-8"
       >
-        <slot name="lead">
-        </div>
+        <slot name="lead" />
+      </div>
     </div>
   </div>
 </section>
