--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -53,7 +53,7 @@ const props = Astro.props;
       </li>
       <li>
         <a
-          href="#portfolio"
+          href="/#portfolio"
           class="flex justify-center space-x-3 md:justify-start text-gray-800"
         >
           <h2 class="sr-only">Portfolio</h2>
