--- a/src/components/PortfolioIndex.astro
+++ b/src/components/PortfolioIndex.astro
@@ -44,11 +44,11 @@ const sizes = "(min-width: 1024px) 33vw, (min-width: 768px) 50vw, 100vw";
   >
     {
       projects.data.projects.map((project) => (
-        <li>
+        <li class="mx-auto">
           <div class="px-3 pb-12 pt-3 nm-flat-sky-100-lg hover:nm-flat-stone-100-lg dark:nm-flat-gray-800-lg dark:hover:nm-flat-stone-600-lg transition duration-200 ease-in-out transform hover:scale-110 rounded-lg p-8 text-center max-w-sm w-full">
             <article class="flex max-w-xl flex-col items-start justify-between">
               <div class="flex items-center gap-x-4 text-xs font-Futurewave">
-                <time datetime="2024-03-16" class="" />
+                <h4 class="">TAGS :</h4>
                 <a
                   href={`/portfolio/${project.slug}`}
                   class="relative z-10 rounded-full bg-gray-50 px-3 py-1.5 font-medium text-gray-600 hover:bg-gray-100"
