--- a/src/layouts/ProjectLayout.astro
+++ b/src/layouts/ProjectLayout.astro
@@ -8,7 +8,7 @@ const {
 
 <MainLayout {title} {description}>
   <section>
-    <div class="mt-6">
+    <div>
       <slot />
     </div>
   </section>
