--- a/src/components/LandingPageBlog.astro
+++ b/src/components/LandingPageBlog.astro
@@ -36,10 +36,7 @@ const posts = await response.json();
 const sizes = "(min-width: 1024px) 33vw, (min-width: 768px) 50vw, 100vw";
 ---
 
-<ul class="mx-auto text-center">
-  <div
-    class="mx-auto mt-10 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 border-t border-sky-500 pt-10 sm:mt-16 sm:pt-16 lg:mx-0 lg:max-w-none lg:grid-cols-3 columns-3"
-  >
+<ul class="mx-auto mt-10 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 border-t border-sky-500 pt-10 sm:mt-16 sm:pt-16 lg:mx-0 lg:max-w-none lg:grid-cols-3 columns-3">
     {
       posts.data.posts.map((post) => (
         <li>
@@ -95,7 +92,6 @@ const sizes = "(min-width: 1024px) 33vw, (min-width: 768px) 50vw, 100vw";
         </li>
       ))
     }
-  </div>
 </ul>
 
 <p class="text-center sm:text-right text-sm font-Futurewave my-2"class="text-right text-sm font-Futurewave">
