--- a/src/components/Notice.astro
+++ b/src/components/Notice.astro
@@ -39,7 +39,7 @@
               >
                 <li class="flex gap-x-3">
                   <svg
-                    class="h-6 w-5 flex-none text-sky-600"
+                    class="h-6 w-5 flex-none"
                     viewBox="0 0 20 20"
                     fill="currentColor"
                     aria-hidden="true"
@@ -57,7 +57,7 @@
                 </li>
                 <li class="flex gap-x-3">
                   <svg
-                    class="h-6 w-5 flex-none text-sky-600"
+                    class="h-6 w-5 flex-none"
                     viewBox="0 0 20 20"
                     fill="currentColor"
                     aria-hidden="true"
@@ -75,7 +75,7 @@
                 </li>
                 <li class="flex gap-x-3">
                   <svg
-                    class="h-6 w-5 flex-none text-sky-600"
+                    class="h-6 w-5 flex-none"
                     viewBox="0 0 20 20"
                     fill="currentColor"
                     aria-hidden="true"
@@ -97,7 +97,7 @@
                 </li>
                 <li class="flex gap-x-3">
                   <svg
-                    class="h-6 w-5 flex-none text-sky-600"
+                    class="h-6 w-5 flex-none"
                     viewBox="0 0 20 20"
                     fill="currentColor"
                     aria-hidden="true"
