Lighthouse: 1st Color Fix

--- a/src/components/Notice.astro
+++ b/src/components/Notice.astro
@@ -14,7 +14,7 @@
             </p>
           </div>
           <p
-            class="mt-6 text-sm sm:text-lg leading-8 text-red-800 dark:text-sky-500 font-Futurewave px-6 sm:px-8"
+            class="mt-6 text-sm sm:text-lg leading-8 text-amber-800 dark:text-sky-500 font-Futurewave px-6 sm:px-8"
           >
             Apologies for any inconvenience. Please be aware that you'll need to
             set up your own development environment. See pre-requirements as per
@@ -39,7 +39,7 @@
               >
                 <li class="flex gap-x-3">
                   <svg
-                    class="h-6 w-5 flex-none"
+                    class="h-6 w-5 flex-none text-sky-600"
                     viewBox="0 0 20 20"
                     fill="currentColor"
                     aria-hidden="true"
@@ -52,12 +52,12 @@
                   <a
                     href="https://nodejs.org/en/download/"
                     target="_blank"
-                    class="p-0">Node & NPM installed (LTS version)</a
+                    class="p-0 font-Futurewave font-bold text-amber-800 dark:text-amber-600">Node & NPM installed (LTS version)</a
                   >
                 </li>
                 <li class="flex gap-x-3">
                   <svg
-                    class="h-6 w-5 flex-none"
+                    class="h-6 w-5 flex-none text-sky-600"
                     viewBox="0 0 20 20"
                     fill="currentColor"
                     aria-hidden="true"
@@ -70,12 +70,12 @@
                   <a
                     href="https://git-scm.com/downloads"
                     target="_blank"
-                    class="p-0">GIT installed</a
+                    class="p-0 font-Futurewave font-bold text-amber-800 dark:text-amber-600">GIT installed</a
                   >
                 </li>
                 <li class="flex gap-x-3">
                   <svg
-                    class="h-6 w-5 flex-none"
+                    class="h-6 w-5 flex-none text-sky-600"
                     viewBox="0 0 20 20"
                     fill="currentColor"
                     aria-hidden="true"
@@ -88,16 +88,16 @@
                   <a
                     href="https://github.com/signup"
                     target="_blank"
-                    class="p-0">GitHub</a
+                    class="p-0 font-Futurewave font-bold text-amber-800 dark:text-amber-600">GitHub</a
                   > &
-                  <a href="https://app.hygraph.com/" target="_blank" class="p-0"
+                  <a href="https://app.hygraph.com/" target="_blank" class="p-0 font-Futurewave font-bold text-amber-800 dark:text-amber-600"
                     >HyGraph</a
                   >
                   account
                 </li>
                 <li class="flex gap-x-3">
                   <svg
-                    class="h-6 w-5 flex-none"
+                    class="h-6 w-5 flex-none text-sky-600"
                     viewBox="0 0 20 20"
                     fill="currentColor"
                     aria-hidden="true"
@@ -110,7 +110,7 @@
                   <a
                     href="https://code.visualstudio.com/download"
                     target="_blank"
-                    class="p-0">VS Code (optional)</a
+                    class="p-0 font-Futurewave font-bold text-amber-800 dark:text-amber-600">VS Code (optional)</a
                   >
                 </li>
               </ul>
