LH: Hero Image from Assets to Public

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -7,15 +7,15 @@ const sizes = "(min-width: 1024px) 33vw, (min-width: 768px) 50vw, 100vw";
 ---
 
 <section id="hero" class="h-full">
-  <Image
-    src={RyuHero}
-    alt="A magnificent Asian golden dragon encircled by crimson-gold blossoms."
+  <img src="/img/goldDragonRed.webp"
+  alt="A magnificent Asian golden dragon encircled by crimson-gold blossoms."
     loading="eager"
     class="absolute object-cover h-screen aspect-auto"
     sizes={sizes}
     width={1920}
     height={1076}
-  />
+    /> 
+
   <div
     class="relative grid h-screen place-items-center bg-red-800/80 dark:bg-gray-800/90 p-6"
   >
