--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -7,14 +7,15 @@ const sizes = "(min-width: 1024px) 33vw, (min-width: 768px) 50vw, 100vw";
 ---
 
 <section id="hero" class="h-full">
-  <img src="/img/goldDragonRed.webp"
-  alt="A magnificent Asian golden dragon encircled by crimson-gold blossoms."
+  <img
+    src="/img/goldDragonRed.webp"
+    alt="A magnificent Asian golden dragon encircled by crimson-gold blossoms."
     loading="eager"
     class="absolute object-cover h-screen aspect-auto"
     sizes={sizes}
     width={1920}
     height={1076}
-    /> 
+  />
 
   <div
     class="relative grid h-screen place-items-center bg-red-800/80 dark:bg-gray-800/90 p-6"
@@ -37,7 +38,7 @@ const sizes = "(min-width: 1024px) 33vw, (min-width: 768px) 50vw, 100vw";
           <h2
             class="text-gradient-hero text-sm sm:text-xl font-semibold uppercase tracking-widest sm:text-right"
           >
-            March 23<span class="text-sm">rd </span>:2024
+            March 23<span class="text-sm">rd</span>:2024
           </h2>
           <p
             class="mt-6 max-w-xl mx-auto leading-7 text-gradient-hero font-Futurewave text-xs sm:text-base"
@@ -88,7 +89,6 @@ const sizes = "(min-width: 1024px) 33vw, (min-width: 768px) 50vw, 100vw";
           </a>
         </div>
       </div>
-
     </div>
   </div>
 </section>
