--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -19,7 +19,7 @@ const props = Astro.props;
     </div>
     <span
       class="hidden self-center text-xl text-gradient-brand font-extrabold uppercase tracking-[0.6em] lg:block"
-      >owddm | kwddm</span
+      >owddm</span
     >
   </a>
   <div class="flex items-center justify-center">
@@ -46,7 +46,7 @@ const props = Astro.props;
             </svg>
           </div>
           <span
-            class="hidden font-extrabold uppercase tracking-[0.6em] sm:block"
+            class="hidden text-sm font-semibold uppercase tracking-[0.6em] sm:block"
             >Blog</span
           >
         </a>
@@ -72,7 +72,7 @@ const props = Astro.props;
             </svg>
           </div>
           <span
-            class="hidden font-extrabold uppercase tracking-[0.6em] sm:block"
+            class="hidden text-sm font-semibold uppercase tracking-[0.6em] sm:block"
             >Portfolio</span
           >
         </a>
