--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,6 +1,7 @@
 ---
 import { Image } from "astro:assets";
 import RyuHero from "../assets/img/goldDragonRed.webp";
+import Avatar from "../assets/img/sunset-crop.webp";
 
 const props = Astro.props;
 const sizes = "(min-width: 1024px) 33vw, (min-width: 768px) 50vw, 100vw";
@@ -20,7 +21,7 @@ const sizes = "(min-width: 1024px) 33vw, (min-width: 768px) 50vw, 100vw";
   <div
     class="relative grid h-screen place-items-center bg-red-800/80 dark:bg-gray-800/90 p-6"
   >
-    <div class="items-center px-0 sm:px-6">
+    <div class="items-center px-0 sm:px-6 flex flex-col-reverse gap-12">
       <div>
         <div class="text-center">
           <h1
@@ -89,6 +90,17 @@ const sizes = "(min-width: 1024px) 33vw, (min-width: 768px) 50vw, 100vw";
           </a>
         </div>
       </div>
+    <div id="avatar">
+      <div class="overflow-hidden aspect-auto">
+        <Image
+          src={Avatar}
+          alt="Selfie"
+          loading="eager"
+          class="rounded-full w-60 h-60 sm:w-72 sm:h-72"
+          sizes={sizes}
+        />
+      </div>
+    </div>
     </div>
   </div>
 </section>
