--- a/src/components/Blog.astro
+++ b/src/components/Blog.astro
@@ -59,7 +59,7 @@ import LandingPageBlog from "../components/LandingPageBlog.astro";
       </div>
       <LandingPageBlog />
       <p class="mt-8 text-right text-sm font-Futurewave">
-        <a href="/blog" class="text-amber-800"> ... find more blog articles &rarr;</a>
+        <a href="/blog" class="text-amber-800 dark:text-amber-600"> ... find more blog articles &rarr;</a>
       </p>
     </div>
   </div>
