--- a/src/components/Portfolio.astro
+++ b/src/components/Portfolio.astro
@@ -48,7 +48,7 @@ import LandingPagePortfolio from "../components/LandingPagePortfolio.astro";
       <LandingPagePortfolio />
 
       <p class="mt-8 text-right text-sm font-Futurewave">
-        <a href="/portfolio" class="text-amber-800"> ... check out my projects &rarr;</a>
+        <a href="/portfolio" class="text-amber-800 dark:text-amber-600"> ... check out my projects &rarr;</a>
       </p>
     </div>
   </div>
