Edit: WxH changes

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,10 +1,10 @@
 ---
 import { Image } from "astro:assets";
-import RyuHero from "../assets/img/goldDragonRed.webp";
+//import RyuHero from "../assets/img/goldDragonRed.webp";
 import Avatar from "../assets/img/sunset-crop.webp";
 
 const props = Astro.props;
-const sizes = "(min-width: 1024px) 33vw, (min-width: 768px) 50vw, 100vw";
+//const sizes = "(min-width: 1024px) 33vw, (min-width: 768px) 50vw, 100vw";
 ---
 
 <section id="hero" class="h-full">
@@ -13,7 +13,6 @@ const sizes = "(min-width: 1024px) 33vw, (min-width: 768px) 50vw, 100vw";
     alt="A magnificent Asian golden dragon encircled by crimson-gold blossoms."
     loading="eager"
     class="absolute object-cover h-screen aspect-auto"
-    sizes={sizes}
     width={1920}
     height={1076}
   />
@@ -97,7 +96,8 @@ const sizes = "(min-width: 1024px) 33vw, (min-width: 768px) 50vw, 100vw";
             alt="Selfie"
             loading="eager"
             class="rounded-full w-60 h-60 sm:w-72 sm:h-72"
-            sizes={sizes}
+            width={1020}
+            height={1020}
           />
         </div>
       </div>
