Pages creation | Styling

--- a/src/components/LandingPagePortfolio.astro
+++ b/src/components/LandingPagePortfolio.astro
@@ -79,7 +79,7 @@ const sizes = "(min-width: 1024px) 33vw, (min-width: 768px) 50vw, 100vw";
                 </div>
                 <span class="self-center font-Futurewave text-xs">
                   <>
-                    <a href="/" class="tracking-widest">
+                    <a href="/credits" class="tracking-widest">
                       masscom
                     </a>
                     <br />
