--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -13,7 +13,7 @@ const { title, description } = Astro.props;
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" type="image/png" href="favicon-16x16.png" />
+  <link rel="icon" type="image/png" href="/favicon-16x16.png" />
   <meta name="viewport" content="width=device-width" />
   <meta name="generator" content={Astro.generator} />
   <title>{title}</title>
