--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -84,26 +84,32 @@ const post = Astro.props.post;
 
 <BlogLayout title={post.title}>
   <TextArticle />
-  <div class="flex">
-    <a class="font-Futurewave" href="/">home</a>
-    <a class="font-Futurewave" href="/blog">/blog</a>
-    <a class="font-Futurewave" href={`/blog/${post.slug}`}>/{post.slug}</a>
-  </div>
-  <div class="flex">
-    <a class="font-Futurewave" href="/blog">go back</a>
-  </div>
-  <div class="prose prose-2xl">
-    {post.title}
-    {post.description}
-    {post.tags}
-    {post.date}
-    {post.authors[0].name}
-    {post.authors[0].intro}
-    {post.authors[0].picture.url}
-    {post.coverImage.url}
-    <p
-      class="mt-5 line-clamp-3 text-sm leading-6"
-      set:html={post.content.html}
-    />
-  </div>
+
+  <section class="my-24">
+    <div class="flex">
+      <a class="font-Futurewave" href="/">home</a>
+      <a class="font-Futurewave" href="/blog">/blog</a>
+      <a class="font-Futurewave" href={`/blog/${post.slug}`}>/{post.slug}</a>
+    </div>
+    <div class="flex">
+      <a class="font-Futurewave" href="/blog">go back</a>
+    </div>
+    <div class="prose prose-2xl">
+      {post.title}
+      {post.description}
+      {post.tags}
+      {post.date}
+
+      <img
+        class="h-64 w-auto" src={post.coverImage.url} />
+      <p
+        class="mt-5 line-clamp-3 text-sm leading-6"
+        set:html={post.content.html}
+      />
+      {post.authors[0].name}
+      {post.authors[0].intro}
+      <img
+        class="h-16 w-16" src={post.authors[0].picture.url} />
+    </div>
+  </section>
 </BlogLayout>
