Created: Aria-Labels

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -33,12 +33,15 @@ const props = Astro.props;
         © Copyright {today.getFullYear()}<br /><a
           href="/credits"
           class="text-gray-800"
-          title="All Rights Reserved in creating workshop project."
+          title="All Rights Reserved in creating this workshop project."
+          aria-label="Credit attribution page to make this project"
           >All Rights Reserved.
         </a>
         <a
           href="https://masscom.media"
           class="flex justify-center space-x-3 md:justify-start text-gray-800"
+          target="_blank"
+          aria-label="A Masscom Media Project"
         >
           <div class="flex items-center justify-center">
             <Icon
