--- a/src/components/TextCredits.astro
+++ b/src/components/TextCredits.astro
@@ -11,6 +11,7 @@ const props = Astro.props;
         title="Nintendo (derivative version by Lucian Novosel), Public domain, via Wikimedia Commons"
         href="https://commons.wikimedia.org/wiki/File:Novosel_mushroom.svg"
         target="_blank"
+        aria-label="A Masscom Media Project"
         >Nintendo (derivative version by Lucian Novosel), Public domain, via
         Wikimedia Commons</a
       >
@@ -19,17 +20,20 @@ const props = Astro.props;
         href="https://www.vecteezy.com/free-photos/oriental"
         target="_blank"
         title="Oriental Stock photos by Vecteezy"
+        aria-label="A Masscom Media Project"
         >Oriental Stock photos by Vecteezy</a
       >
       <a
         href="https://pixabay.com/illustrations/sunset-anime-minimal-nature-sky-7628294/"
         title="Pixabay | Sunset"
-        target="_blank">Pixabay | Sunset</a
+        target="_blank"
+        aria-label="A Masscom Media Project">Pixabay | Sunset</a
       >
       <a
         href="https://unsplash.com/"
         target="_blank"
         title="Unsplash | The internet’s source for visuals."
+        aria-label="A Masscom Media Project"
         >Unsplash | The internet’s source for visuals.</a
       >
     </div>
@@ -39,6 +43,7 @@ const props = Astro.props;
         title="Astro.build | The web framework for content-driven websites."
         href="https://astro.build/"
         target="_blank"
+        aria-label="A Masscom Media Project"
         >Astro.build - The web framework for content-driven websites</a
       >
 
@@ -46,12 +51,14 @@ const props = Astro.props;
         title="HyGraph | The headless CMS powering mission-critical applications."
         href="https://hygraph.com/"
         target="_blank"
+        aria-label="A Masscom Media Project"
         >HyGraph - The headless CMS powering mission-critical applications.</a
       >
       <a
         title="Tailwind CSS | Rapidly build modern websites without ever leaving your HTML."
         href="https://tailwindcss.com/"
         target="_blank"
+        aria-label="Read and learn more about Tailwind CSS"
         >Tailwind CSS | Rapidly build modern websites without ever leaving your
         HTML</a
       >
@@ -63,6 +70,7 @@ const props = Astro.props;
         title="Sam Beevors | Tailwind CSS Neumorphism"
         href="https://github.com/sambeevors/tailwindcss-neumorphism"
         target="_blank"
+        aria-label="Read and learn more about Tailwind CSS Neumorphism"
         >Sam Beevors | Tailwind CSS Neumorphism.</a
       >
 
@@ -70,18 +78,21 @@ const props = Astro.props;
         title="Tailwind Labs | Tailwind CSS Typography"
         href="https://github.com/tailwindlabs/tailwindcss-typography"
         target="_blank"
+        aria-label="Read and learn more about Tailwind CSS"
         >Tailwind Labs | Tailwind CSS Typography</a
       >
       <a
         title="Astro Icon | Icons made easy, powered by Astro."
         href="https://www.astroicon.dev/"
         target="_blank"
+        aria-label="Read and learn more about Astro Icon"
         >Astro Icon | Icons made easy, powered by Astro.</a
       >
       <a
         title="Fontsource | Self-host Open Source fonts in neatly bundled NPM packages."
         href="https://fontsource.org/"
         target="_blank"
+        aria-label="Read and learn more about Fontsource NPM"
         >Fontsource | Self-host Open Source fonts in neatly bundled NPM packages.</a
       >
     </div>
@@ -91,6 +102,7 @@ const props = Astro.props;
         title="Cybozu | ほんとに、ありがとうございました。For having us using their meeting-room facilities"
         href="https://cybozu.co.jp/"
         target="_blank"
+        aria-label="Read and learn more about Cybozu"
         >Cybozu</a
       >
 
@@ -98,6 +110,7 @@ const props = Astro.props;
         href="https://owddm.com/"
         target="_blank"
         title="OWDDM is a volunteer, non-profit group that organizes meetups in Kansai."
+        aria-label="Read and learn more about OWDDM"
         >OWDDM | KWDDM - Osaka/Kyoto Web Designers and Developers Meetup</a
       >
     </div>
