--- a/src/pages/credits.astro
+++ b/src/pages/credits.astro
@@ -17,6 +17,7 @@ const sizes = "(min-width: 1024px) 33vw, (min-width: 768px) 50vw, 100vw";
               src="https://upload.wikimedia.org/wikipedia/en/thumb/c/ca/Studio_Ghibli_logo.svg/1200px-Studio_Ghibli_logo.svg.png"
               class="aspect-auto mx-auto max-w-72"
               alt="Studio Ghibli logo"
+              aria-label="Studio Ghibli logo with Totoro"
             />
           </div>
         </div>
@@ -28,7 +29,8 @@ const sizes = "(min-width: 1024px) 33vw, (min-width: 768px) 50vw, 100vw";
               href="https://masscom.media/"
               class="font-Futurewave"
               title="A Masscom Media Project"
-              target="_blank">A Masscom Media Project</a
+              target="_blank"
+              aria-label="A Masscom Media Project">A Masscom Media Project</a
             ></span
           >
         </p>
