--- a/src/components/CTA.astro
+++ b/src/components/CTA.astro
@@ -12,7 +12,11 @@ import Skills from "../assets/img/mushroom.svg";
       >
         <div class="w-full px-6 py-12 lg:max-w-5xl lg:w-1/2">
           <div class="h-64 bg-cover z-40">
-            <Image src={Skills} alt="Call to Action: Skill-Up with the iconic Super Mushroom from the Mario Brothers universe!" loading="lazy" />
+            <Image
+              src={Skills}
+              alt="Call to Action: Skill-Up with the iconic Super Mushroom from the Mario Brothers universe!"
+              loading="lazy"
+            />
           </div>
         </div>
 
@@ -83,6 +87,48 @@ import Skills from "../assets/img/mushroom.svg";
           </svg>
           Astro build setup
         </li>
+        <li class="flex gap-x-3">
+          <svg
+            class="h-6 w-5 flex-none text-sky-500"
+            viewBox="0 0 20 20"
+            fill="currentColor"
+            aria-hidden="true"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
+              clip-rule="evenodd"></path>
+          </svg>
+          Netlify deployment
+        </li>
+        <li class="flex gap-x-3">
+          <svg
+            class="h-6 w-5 flex-none text-sky-500"
+            viewBox="0 0 20 20"
+            fill="currentColor"
+            aria-hidden="true"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
+              clip-rule="evenodd"></path>
+          </svg>
+          Re:factor your code
+        </li>
+        <li class="flex gap-x-3">
+          <svg
+            class="h-6 w-5 flex-none text-sky-500"
+            viewBox="0 0 20 20"
+            fill="currentColor"
+            aria-hidden="true"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
+              clip-rule="evenodd"></path>
+          </svg>
+          Fetch data from HyGraph
+        </li>
         <li class="flex gap-x-3 line-through">
           <svg
             class="h-6 w-5 flex-none text-sky-500"
@@ -111,20 +157,6 @@ import Skills from "../assets/img/mushroom.svg";
           </svg>
           VS Code basics
         </li>
-        <li class="flex gap-x-3">
-          <svg
-            class="h-6 w-5 flex-none text-sky-500"
-            viewBox="0 0 20 20"
-            fill="currentColor"
-            aria-hidden="true"
-          >
-            <path
-              fill-rule="evenodd"
-              d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
-              clip-rule="evenodd"></path>
-          </svg>
-          Re:factor your code
-        </li>
         <li class="flex gap-x-3 line-through">
           <svg
             class="h-6 w-5 flex-none text-sky-500"
@@ -138,34 +170,6 @@ import Skills from "../assets/img/mushroom.svg";
               clip-rule="evenodd"></path>
           </svg>
           SEO basics
-        </li>
-        <li class="flex gap-x-3">
-          <svg
-            class="h-6 w-5 flex-none text-sky-500"
-            viewBox="0 0 20 20"
-            fill="currentColor"
-            aria-hidden="true"
-          >
-            <path
-              fill-rule="evenodd"
-              d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
-              clip-rule="evenodd"></path>
-          </svg>
-          Fetch data from HyGraph
-        </li>
-        <li class="flex gap-x-3">
-          <svg
-            class="h-6 w-5 flex-none text-sky-500"
-            viewBox="0 0 20 20"
-            fill="currentColor"
-            aria-hidden="true"
-          >
-            <path
-              fill-rule="evenodd"
-              d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
-              clip-rule="evenodd"></path>
-          </svg>
-          Netlify deployment
         </li>
         <li class="flex gap-x-3 line-through">
           <svg
