--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -13,12 +13,12 @@ const props = Astro.props;
     <div class="flex items-center">
       <Icon
         name="logomark"
-        class="h-12 w-auto rounded text-red-800 hover:text-blue-950"
+        class="h-10 md:h-12 w-auto rounded text-red-800 hover:text-blue-950"
         aria-label="OWDDM logo"
       />
     </div>
     <span
-      class="hidden self-center text-xl text-gradient-brand font-extrabold uppercase tracking-[0.6em] lg:block"
+      class="hidden self-center text-sm md:text-xl text-gradient-brand font-extrabold uppercase tracking-[0.6em] lg:block"
       >owddm</span
     >
   </a>
