Styling: Hero | Padding

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -39,7 +39,7 @@ const sizes = "(min-width: 1024px) 33vw, (min-width: 768px) 50vw, 100vw";
             </div>
           </div>
         </div>
-        <div class="row py-3">
+        <div class="row py-3 pt-16">
           <div class="text-center">
             <h1
               class="font-Futurewave text-xs sm:text-xl text-gray-400 dark:text-white"
