UX improved: CTA and Notice

--- a/src/components/CTA.astro
+++ b/src/components/CTA.astro
@@ -48,7 +48,8 @@ import Skills from "../assets/img/mushroom.svg";
               Start Now
             </a>
             <a
-              href="#disclaimer"
+              href="https://owddm.com/"
+              target="_blank"
               class="text-sm font-semibold leading-6 dark:text-teal-600"
               >Learn more <span aria-hidden="true">→</span></a
             >
