Change: Hero message

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -44,13 +44,13 @@ const sizes = "(min-width: 1024px) 33vw, (min-width: 768px) 50vw, 100vw";
             <h1
               class="font-Futurewave text-xs sm:text-xl text-gray-400 dark:text-white"
             >
-              an <span
+              Workshop at <span
                 class="text-sm sm:text-4xl font-extrabold font-Futurewave text-gradient-hero"
                 >OWDDM
-              </span>Workshop<br />with<span
+              </span><br />in<span
                 class="text-sm sm:text-2xl font-extrabold font-Futurewave"
               >
-                Romano Moesa</span
+                Astro.build & HyGraph</span
               >
             </h1>
             <h2
@@ -61,8 +61,7 @@ const sizes = "(min-width: 1024px) 33vw, (min-width: 768px) 50vw, 100vw";
             <p
               class="mt-6 max-w-xl mx-auto leading-7 text-gradient-hero font-Futurewave text-xs sm:text-base"
             >
-              Learn how to create a blog & portfolio in Astro and Tailwind CSS
-              with HyGraph as a headless CMS.
+              Learn how to create a blog & portfolio and gain insights into the process of creating a website project from the ground up, all the way through deployment.
             </p>
           </div>
         </div>
